* bug log4shell fixed * refresh * project MainMany added